--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>dpp-labor-opposition</title>
+    <title>我要七天假</title>
   </head>
   <body>
     <div id="app"></div>
