--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta property="og:image" content="https://7holidays.github.io/static/fbimage.png">
+    <meta property="og:url" content="https://7holidays.github.io/">
+    <meta property="og:title" content="我要七天假！">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="民進黨吳秉叡說，不支持民進黨版本（內含砍七天假）的勞基法，以後可以不用投給民進黨。太好了，打電話告訴你選區的立委吧！">
     <title>我要七天假</title>
   </head>
   <body>
